solving z-index issues

--- a/css/main.css
+++ b/css/main.css
@@ -277,7 +277,7 @@ legend {
 .rationale {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 4; /* Sit on top */
+    z-index: 150; /* Sit on top */
     left: 0;
     top: 0;
     padding-left: 20%;
